<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ihs.com.cliniclocator.AboutFragment"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgloadingscreenabout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/about_us"
            android:src="@drawable/logo_splash_official_new"
            android:layout_gravity="center"
            android:layout_marginTop="@android:dimen/notification_large_icon_height"/>

        <TextView
            android:id="@+id/fullscreen_content_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:keepScreenOn="true"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fullscreen_content_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:keepScreenOn="true"
            android:text="@string/app_version"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fullscreen_content_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:keepScreenOn="true"
            android:text="@string/app_version"
            android:textColor="@color/colorPrimary"
            android:textSize="10sp"
            android:textStyle="bold"
            android:textAlignment="center"/>

    </LinearLayout>

</FrameLayout>
